[gd_scene load_steps=11 format=3 uid="uid://b8g06fakclmwh"]

[ext_resource type="MeshLibrary" uid="uid://g7rie4nh5rkf" path="res://assets/golf_tiles.tres" id="1_4krvn"]
[ext_resource type="Script" path="res://hole/hole.gd" id="1_qpqvn"]
[ext_resource type="PackedScene" uid="uid://csr43bvoqdbrj" path="res://ball.tscn" id="2_egw1j"]
[ext_resource type="PackedScene" uid="uid://x4vlvc3ps6m1" path="res://ui/ui.tscn" id="3_8f3o5"]
[ext_resource type="PackedScene" uid="uid://p4y0olyw50uy" path="res://ui/arrow.tscn" id="5_c2lmo"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jo264"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_j2te5"]
sky_material = SubResource("ProceduralSkyMaterial_jo264")

[sub_resource type="Environment" id="Environment_j6epe"]
background_mode = 2
sky = SubResource("Sky_j2te5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8flpc"]
rough = true
bounce = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ink08"]
height = 0.25
radius = 0.08

[node name="Hole" type="Node3D"]
script = ExtResource("1_qpqvn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j6epe")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_4krvn")
physics_material = SubResource("PhysicsMaterial_8flpc")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(1, 65534, 655369, 0, 65535, 1441801, 1, 3, 22, 1, 0, 24, 1, 1, 24, 1, 2, 24, 1, 65535, 15, 2, 65535, 1441816, 3, 65535, 1441816, 4, 65535, 1048577)
}

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.573576, -0.802707, 0.163313, 0, 0.199368, 0.979925, -0.819152, -0.562062, 0.114353, 2.6, 4, 1)
current = true

[node name="Target" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.49812, 0.370977, -0.499141)
shape = SubResource("CylinderShape3D_ink08")

[node name="Tee" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.492, 1.321, 3.791)

[node name="UI" parent="." instance=ExtResource("3_8f3o5")]

[node name="Ball" parent="." instance=ExtResource("2_egw1j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.49249, 1.32116, 3.79082)

[node name="Arrow" parent="." instance=ExtResource("5_c2lmo")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 1.53172, 1.34046, 0)
visible = false

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 1)
visible = false
projection = 1
size = 6.0
near = 0.583

[connection signal="body_entered" from="Target" to="." method="_on_hole_body_entered"]
[connection signal="stopped" from="Ball" to="." method="_on_ball_stopped"]
[connection signal="touching" from="Ball" to="." method="_on_ball_touching"]
